JG-2008-10-08-0: Bugfix:    Fixed bugs/issuezilla/2328
                 Review:    CR

TB-2008-10-07-1: Bugfix:    Made failing hedeby test for issue 537 more robust
                 Enhancem.: o Changed hedeby test for issue 537 to use optional
                              named argument passing:
                            o new procedure util/hedeby_mod_setup_opt()
                 Review:    MG

TB-2008-10-07-0: Enhancem.: o new helper function tcl_util/pick_random()
                 Review:    CR

JG-2008-10-06-0: Enhancem.: Do testsuite locking on the results directory
                            instead of on the testsuite source directory.
                            Some cleanup.
                 Review:    CR

JF-2008-10-06-0: Enhancem.:  New test for testsuite. SGE issue 2582.
                 Review:     LP

MG-2008-10-04-0: Bugfix:    small TCL error fix for MinResource test for Hedeby.
                 Review:    MB

MG-2008-10-02-0: Bugfix:    Hedeby test issue_551 fails.
                 Review:    MB

RD-2008-10-02-0: Bugfix:    fixed qmaster/spooling test
                 Review:    CR

DG-2008-10-01-0: Enhancem.: Qresub functional test added.
                 Issue:     243
                 Review:    CR

CR-2008-10-01-0: Bugfix:    fixed get_home_dir_path()
                 Review:    JG

EB-2008-09-30-0: Bugfix:    "Enforced Job Deletion" test sometimes failed, when
                            shutdown of execd took to long on certain hosts.
                            Added additional test for batch job.
                 Review:    RD (TBD)

TB-2008-09-30-0: Enhancem.:  Hedeby optional named argument passing
                             new procedures:
                             o sdmadm_command_opt()
                             o start_parallel_sdmadm_command_opt()
                             o get_hedeby_proc_default_opt_args()
                             o get_hedeby_proc_opt_args()