@@ -1,3 +1,6 @@
+JG-2008-10-08-0: Enhancem.: New check for IZ 2737 in functional/access_lists.
+                 Review:    CR
+
 JG-2008-10-08-0: Bugfix:    Fixed bugs/issuezilla/2328
                  Review:    CR
 
